Test for fulltext search on several tabs